2017-07-29:

	2.2.0 released.

	* Added emulation of a number of MT-32 GEN0 quirks that is enabled when loading e.g. Control ROM v1.07,
	  so many patches specific for old MT-32 are now played correctly. Thanks go to NewRisingSun for providing
	  the test set of those patches. See http://www.vogons.org/viewtopic.php?p=578873#p578873 for more details.
	* Fixed sample format conversion implementation, so that integer samples are converted to normalised
	  float samples as well as float samples are still converted to full-range integer ones.
	  LA32FloatWaveGenerator now produces output at 0.25 volume that corresponds to the fact that each partial
	  in LA32 uses only 14-bit samples. Still, no clamping is applied in DACInputMode_NICE mode for floats,
	  so the output samples may overshoot a little for tunes with the volume set too high.
	* Introduced "Nice Amp Ramp" mode intended to improve emulation of amplitude ramp in sustain phase.
	  Quick changes of volume or expression on a MIDI channel may result in amp jumps on real hardware.
	  When "Nice Amp Ramp" mode is enabled (default), amp changes gradually instead. Otherwise,
	  the emulation accuracy is preserved.

2017-04-09:

	2.1.0 released.

	* Added sample rate conversion feature that allows converting the synthesiser output to any desired sample rate.
	  It can either utilise an external library (e.g. libsoxr or libsamplerate) or use an internal implementation.
	  This behaviour is controlled by a build option libmt32emu_WITH_INTERNAL_RESAMPLER (enabled by default).
	  The internal implementation is derived from that previously added in mt32emu-qt application and aims
	  to provide for good performance yet lower the added latency at the expense of phase linearity.
	* The types of the rendering engine and of the wave generator can now be triggered in runtime. Nuked
	  MT32EMU_USE_FLOAT_SAMPLES preprocessor definition.

2017-03-05:

	2.0.4 released.
